possible fix of toggle button alignment on iPad

--- a/public/css/audio_and_snowflake_toggle.css
+++ b/public/css/audio_and_snowflake_toggle.css
@@ -3,7 +3,7 @@
   background-color: transparent;
   border: none;
   height: 30px;
-  width: 61px;
+  width: 71px;
   position: absolute;
 }
 
